load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "ovirt-imageio_lib",
    srcs = ["main.go"],
    importpath = "github.com/konveyor/forklift-controller/ovirt-imageio",
    visibility = ["//visibility:private"],
    deps = [
        "//ovirt-imageio/pkg/v1beta1",
        "//vendor/github.com/kubernetes-csi/lib-volume-populator/populator-machinery",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:meta",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1/unstructured",
        "//vendor/k8s.io/apimachinery/pkg/runtime",
        "//vendor/k8s.io/apimachinery/pkg/runtime/schema",
        "//vendor/k8s.io/client-go/dynamic",
        "//vendor/k8s.io/client-go/kubernetes",
        "//vendor/k8s.io/client-go/rest",
        "//vendor/k8s.io/klog/v2:klog",
    ],
)

go_binary(
    name = "ovirt-imageio",
    embed = [":ovirt-imageio_lib"],
    visibility = ["//visibility:public"],
)
