load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "tests_test",
    srcs = ["base_test.go"],
    deps = [
        "//pkg/apis",
        "//pkg/apis/forklift/v1beta1",
        "//pkg/apis/forklift/v1beta1/plan",
        "//pkg/apis/forklift/v1beta1/provider",
        "//pkg/apis/forklift/v1beta1/ref",
        "//pkg/controller/provider/container/ovirt",
        "//vendor/github.com/ovirt/go-ovirt",
        "//vendor/k8s.io/api/core/v1:core",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:meta",
        "//vendor/k8s.io/apimachinery/pkg/types",
        "//vendor/k8s.io/apimachinery/pkg/util/wait",
        "//vendor/k8s.io/client-go/kubernetes/scheme",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/client",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/client/config",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/runtime/log",
    ],
)
