load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image",
)

container_image(
    name = "validation-policies",
    base = "@ubi8-minimal//image",
    directory = "/usr/share/opa/",
    files = ["policies"],
)

container_image(
    name = "opa",
    base = ":validation-policies",
    directory = "/usr/bin/",
    files = ["@opa//file"],
)

container_image(
    name = "forklift-validation-image",
    base = ":opa",
    directory = "/",
    entrypoint = ["/entrypoint.sh"],
    files = ["entrypoint.sh"],
    user = "1001",
    visibility = ["//visibility:public"],
)
