load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image",
)

container_image(
    name = "virt-v2v-image",
    base = "@ubi8-minimal//image",
    directory = "/",
    tars = ["//rpm:virt-v2v"],
)

container_image(
    name = "forklift-virt-v2v",
    base = ":virt-v2v-image",
    directory = "/usr/local/bin/",
    empty_dirs = ["/disks"],
    entrypoint = ["/usr/local/bin/entrypoint"],
    env = {"LIBGUESTFS_BACKEND": "direct"},
    files = ["bin/entrypoint"],
    user = "1001",
    visibility = ["//visibility:public"],
)
