load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "image-converter_lib",
    srcs = ["image-converter.go"],
    importpath = "github.com/konveyor/forklift-controller/cmd/image-converter",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/metrics",
        "//vendor/github.com/prometheus/client_golang/prometheus",
        "//vendor/github.com/prometheus/client_model/go",
        "//vendor/k8s.io/klog/v2:klog",
    ],
)

go_binary(
    name = "image-converter",
    embed = [":image-converter_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "image-converter_test",
    srcs = [
        "image-converter_test.go",
        "image_converter_suite_test.go",
    ],
    embed = [":image-converter_lib"],
    deps = [
        "//vendor/github.com/onsi/ginkgo/v2:ginkgo",
        "//vendor/github.com/onsi/gomega",
    ],
)
