
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "image-converter_lib",
    srcs = ["image-converter.go"],
    importpath = "github.com/konveyor/forklift-controller/cmd/image-converter",
    visibility = ["//visibility:private"],
    deps = ["//vendor/k8s.io/klog/v2:klog"],
)

go_binary(
    name = "image-converter",
    embed = [":image-converter_lib"],
    visibility = ["//visibility:public"],
)

