load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image",
)

go_library(
    name = "openstack-populator_lib",
    srcs = ["openstack-populator.go"],
    importpath = "github.com/konveyor/forklift-controller/cmd/openstack-populator",
    visibility = ["//visibility:private"],
    deps = [
        "//vendor/github.com/prometheus/client_golang/prometheus",
        "//vendor/github.com/prometheus/client_model/go",
        "//vendor/k8s.io/klog/v2:klog",
        "@com_github_kubev2v_forklift//pkg/lib/client/openstack:go_default_library",
        "@com_github_kubev2v_forklift//pkg/metrics:go_default_library",
    ],
)

go_binary(
    name = "openstack-populator",
    embed = [":openstack-populator_lib"],
    visibility = ["//visibility:public"],
)

container_image(
    name = "openstack-populator-image",
    base = "@ubi9-minimal//image",
    directory = "/usr/local/bin/",
    entrypoint = ["/usr/local/bin/openstack-populator"],
    files = [":openstack-populator"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "openstack-populator_test",
    srcs = ["openstack-populator_test.go"],
    embed = [":openstack-populator_lib"],
)
