load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "ova-provider-server_lib",
    srcs = ["ova-provider-server.go"],
    importpath = "github.com/konveyor/forklift-controller/cmd/ova-provider-server",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "ova-provider-server",
    embed = [":ova-provider-server_lib"],
    visibility = ["//visibility:public"],
)
