load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "ova-provider-server_lib",
    srcs = ["ova-provider-server.go"],
    importpath = "github.com/konveyor/forklift-controller/cmd/ova-provider-server",
    visibility = ["//visibility:private"],
    deps = ["//vendor/github.com/google/uuid"],
)

go_binary(
    name = "ova-provider-server",
    embed = [":ova-provider-server_lib"],
    visibility = ["//visibility:public"],
)

load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image",
)

container_image(
    name = "ova-provider-server-image",
    base = "@ova-provider-server-image-dockerfile//image:dockerfile_image.tar",
    visibility = ["//visibility:public"],
)
