
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "ova-provider-server_lib",
    srcs = ["ova-provider-server.go"],
    importpath = "github.com/konveyor/forklift-controller/cmd/ova-provider-server",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/lib/gob",
        "//vendor/github.com/google/uuid",
    ],
)

go_binary(
    name = "ova-provider-server",
    embed = [":ova-provider-server_lib"],
    visibility = ["//visibility:public"],
)

load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image",
)

go_test(
    name = "ova-provider-server_test",
    srcs = ["nfs_test.go"],
    embed = [":ova-provider-server_lib"],
    deps = ["//vendor/github.com/onsi/gomega"],
)

container_image(
    name = "ova-provider-server-image",
    base = "@ubi9-minimal//image",
    directory = "/usr/local/bin/",
    entrypoint = ["/usr/local/bin/ova-provider-server"],
    files = [":ova-provider-server"],
    visibility = ["//visibility:public"],
)

